[package]
name = "cw721-ext"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.1"
terraswap = "2.4.0"
cw2 = {  version = "0.9.1" }
cw20-base = { version = "0.8.0", features = ["library"] }
cw20 = "0.8.0"
cw721 = "0.9.2"
cw721-base = { version = "0.9.2", features = ["library"] }
thiserror = { version = "1.0.23" }
cw-storage-plus = { version = "0.8.0" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4.2"
lazy_static = "1.4.0"

[dev-dependencies]
serde_json = "1.0"